# ToneCurveImage

./: CMakeLists.txt  main.cpp  parseFile.cpp  parseFile.h
